improving dark mode

--- a/src/contactMe.css
+++ b/src/contactMe.css
@@ -21,7 +21,7 @@
     transition-duration: .3s;
   }
 .contactMeCard{
-    padding-top: 5%;
+    /* padding-top: 5%; */
     text-align
     : center;
     font-size: 18px;
@@ -112,12 +112,12 @@
     margin: 5%;
     box-shadow: 0px 0px 0px 2px #CBE4DE;
     transition-duration: 0.3s;
-    animation: buttonMovement 3s;
-    -moz-animation: buttonMovement 3s;
+    /* animation: buttonMovement 3s; */
+    /* -moz-animation: buttonMovement 3s; */
     /* Firefox */
-    -webkit-animation: buttonMovement 3s;
+    /* -webkit-animation: buttonMovement 3s; */
     /* Safari and Chrome */
-    -o-animation: buttonMovement 3s;
+    /* -o-animation: buttonMovement 3s; */
     /* Opera */
   }
   @keyframes buttonMovement {
@@ -136,10 +136,10 @@
     width: 220px;
     display: inline-flex;
     justify-content: center;
-    animation: lineMovement 3s;
-  -moz-animation: lineMovement 3s;
-  -webkit-animation: lineMovement 3s;
-  -o-animation: lineMovement 3s;
+    /* animation: lineMovement 3s; */
+  /* -moz-animation: lineMovement 3s; */
+  /* -webkit-animation: lineMovement 3s; */
+  /* -o-animation: lineMovement 3s; */
 }
 .content{
     margin-top: 2%;
