--- a/src/projects.css
+++ b/src/projects.css
@@ -4,10 +4,10 @@
 }
 
 .projects h1 {
-  animation: headingMovement 3s;
-  -moz-animation: headingMovement 3s;
-  -webkit-animation: headingMovement 3s;
-  -o-animation: headingMovement 3s;
+  /* animation: headingMovement 3s; */
+  /* -moz-animation: headingMovement 3s; */
+  /* -webkit-animation: headingMovement 3s; */
+  /* -o-animation: headingMovement 3s; */
 }
 
 .cards {
@@ -30,14 +30,14 @@
   display: inline-flex;
   text-align: center;
   justify-content: space-between;
-  animation: skills 3s;
-  -moz-animation: skills 3s;
-  -webkit-animation: skills 3s;
-  -o-animation: skills 3s;
+  /* animation: skills 3s; */
+  /* -moz-animation: skills 3s; */
+  /* -webkit-animation: skills 3s; */
+  /* -o-animation: skills 3s; */
 }
 .cards .card:hover {
   /* transform: scale(1.05) !important; */
-  transition: 0.3s ease; 
+  /* transition: 0.3s ease;  */
 }
 .col{
   align-items: center;
@@ -66,17 +66,17 @@
 }
 
 .cards .card:hover {
-  transition: 0.3s ease;
+  /* transition: 0.3s ease; */
 }
 
 .line2 {
   width: 180px;
   display: inline-flex;
   justify-content: center;
-  animation: lineMovement 3s;
-  -moz-animation: lineMovement 3s;
-  -webkit-animation: lineMovement 3s;
-  -o-animation: lineMovement 3s;
+  /* animation: lineMovement 3s; */
+  /* -moz-animation: lineMovement 3s; */
+  /* -webkit-animation: lineMovement 3s; */
+  /* -o-animation: lineMovement 3s; */
 }
 
 @keyframes headingMovement {
