--- a/src/skills.css
+++ b/src/skills.css
@@ -36,9 +36,10 @@
     background-color: white;
 }
 .image-skills{
-    height: 120px !important;
-    width: 120px !important;
+    height: 70px !important;
+    width: 70px !important;
     opacity: 1;
+    margin-top: 5%;
     /* animation: skills 3s; */
     /* -moz-animation: skills 3s; */
     /* -webkit-animation: skills 3s; */
@@ -140,8 +141,8 @@
   }
 
   .box {
-    width: 190px;
-    height: 200px;
+    width: 150px;
+    height: 160px;
     border-radius: 50px;
    }
 
