--- a/src/projects.css
+++ b/src/projects.css
@@ -115,6 +115,15 @@
   }
 }
 
+@media screen and (max-width: 1600px) {
+  /* .card {
+    transform: scale(0.8);
+  } */
+  .projects{
+    height: 1300px !important;
+  }
+}
+
 @media screen and (max-width: 1300px) {
   .card {
     transform: scale(0.8);
@@ -132,14 +141,14 @@
     /* transform: scale(1); */
   }
   .projects{
-    height: 1700px !important;
+    height: 2200px !important;
   } 
 }
 
 @media screen and (max-width: 600px) {
   .projects {
     padding-top: 20%;
-    height: 1800px !important;
+    height: 2300px !important;
   }
   .projectImage{
     height:200px; 
