--- a/src/introduction.css
+++ b/src/introduction.css
@@ -11,7 +11,7 @@
   padding-bottom: 1%;
   padding-left: 10%;
   padding-right: 10%;
-  text-align: justify;
+  text-align: left;
   font-size: 18px;
 
 }
@@ -124,7 +124,7 @@
 @media screen and (max-width: 750px) {
   .card-intro {
     padding-top: 20%;
-    height: 1300px;
+    height: 1400px;
   }
 
   .imgStyle {
