--- a/src/introduction.css
+++ b/src/introduction.css
@@ -12,7 +12,7 @@
   padding-left: 10%;
   padding-right: 10%;
   text-align: left;
-  font-size: 18px;
+  font-size: 17px;
 
 }
 
@@ -32,9 +32,10 @@
 }
 
 .imgStyle {
-  height: 500px;
-  width: 500px;
+  height: 350px;
+  width: 350px;
   border-radius: 10% !important;
+  border: 1px solid black;
 }
 
 .line {
